--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,7 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env.local
+
 
 # vercel
 .vercel
@@ -42,3 +41,4 @@ yarn-error.log*
 # Env files created by scripts for working locally
 .env
 studio/.env.development
+.env*.local
