--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@sanity/client": "6.29.0",
     "@sanity/icons": "3.7.0",
     "@sanity/image-url": "1.1.0",
