--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-sanity-image": "6.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "sanity": "3.84.0",
     "sanity-plugin-asset-source-unsplash": "3.0.3",
     "sanity-plugin-iframe-pane": "3.2.1",
