--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/vision": "3.84.0",
     "@sanity/visual-editing": "2.13.17",
     "@sanity/webhook": "4.0.4",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/og": "0.6.8",
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
