--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
     "groq": "3.84.0",
+    "i18next": "^25.0.1",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "15.3.0",
+    "next-i18next": "^15.4.2",
     "next-sanity": "9.10.1",
     "next-sanity-image": "6.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "sanity": "3.84.0",
     "sanity-plugin-asset-source-unsplash": "3.0.3",
