--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "i18next": "^25.0.1",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "15.3.0",
-    "next-i18next": "^15.4.2",
+    "next-intl": "^4.1.0",
     "next-sanity": "9.10.1",
     "next-sanity-image": "6.1.1",
     "react": "19.1.0",
