--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "0.6.8",
     "classnames": "2.5.1",
+    "clsx": "^2.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "^12.9.1",
     "groq": "3.84.0",
