--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "classnames": "2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
-    "framer-motion": "^12.9.1",
     "groq": "3.84.0",
     "intl-segmenter-polyfill": "0.4.4",
+    "motion": "^12.9.2",
     "next": "15.3.0",
     "next-intl": "^4.1.0",
     "next-sanity": "9.10.1",
@@ -38,6 +38,7 @@
     "react-dom": "19.1.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "sanity": "3.84.0",
     "sanity-plugin-asset-source-unsplash": "3.0.3",
     "sanity-plugin-iframe-pane": "3.2.1",
